# backend/Application/Features/Accommodations/Queries/GetAccommodations/AccommodationDto.cs
@@ -13,5 +13,5 @@ public class AccommodationDto
     public required decimal Latitude { get; set; }
     public required decimal Longitude { get; set; }
     public required decimal PricePerNight { get; set; }
-    public string? Image { get; set; }
+    public required string[] Images { get; set; }
 }
