# frontend/ABMS/swagger.json
@@ -101,21 +101,20 @@
             }
           },
           {
+            "name": "RecordNo",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
             "name": "Offset",
             "in": "query",
             "schema": {
               "type": "integer",
               "format": "int32",
               "default": 0
-            }
-          },
-          {
-            "name": "RecordNo",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32",
-              "default": 10
             }
           }
         ],
@@ -159,6 +158,37 @@
                   "items": {
                     "$ref": "#/components/schemas/SuggestionDto"
                   }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/accommodations/{id}": {
+      "get": {
+        "tags": [
+          "accommodations"
+        ],
+        "operationId": "accommodation",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetAccommodationResponse"
                 }
               }
             }
@@ -233,6 +263,7 @@
       "AccommodationDto": {
         "required": [
           "city",
+          "images",
           "latitude",
           "longitude",
           "name",
@@ -293,8 +324,11 @@
             "type": "number",
             "format": "double"
           },
-          "image": {
-            "type": "string",
+          "images": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
             "nullable": true
           }
         },
@@ -339,6 +373,18 @@
           },
           "didExist": {
             "type": "boolean"
+          }
+        },
+        "additionalProperties": false
+      },
+      "GetAccommodationResponse": {
+        "type": "object",
+        "properties": {
+          "success": {
+            "type": "boolean"
+          },
+          "accommodation": {
+            "$ref": "#/components/schemas/AccommodationDto"
           }
         },
         "additionalProperties": false
